--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /.idea
+/python/__pycache__
+/C++/.idea
+/C++/src/cmake-build-debug
+/C++/src/build
+/C++/lib/libtensorflow.so
+/C++/lib/libtensorflow_framework.so
